--- a/Project 1.ipynb
+++ b/Project 1.ipynb
@@ -14,7 +14,7 @@
    "id": "adb2f3e3",
    "metadata": {},
    "source": [
-    
+    "Our data is very comprehensive, and to answer our question: (Y Variable) whether city or high school impact the SAT score a child gets, we will use different variables. One of our variable (X_1) will be city, the second will be highschool ID (X_2) while we will also take in the average SAT scores from each high school (X_3). "
    ]
   },
   {
