--- a/Project 1.ipynb
+++ b/Project 1.ipynb
@@ -2,10 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "4323ad94",
+   "metadata": {},
+   "source": [
+    "# Does the Borough and Ethinic a student belongs to affect their overall SAT score in NYC"
+   ]
+  },
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
    "id": "7bd5d283",
    "metadata": {},
    "source": [
-    "# Introduction \n",
+    "## Introduction \n",
     "With the use of high school data compiled from the New York City Department of Education, and the SAT score averages and testing rates provided by the College Board, we analyse and discuss whether a student's high school and borough affects the SAT score he gets through college board. SAT scores are standardized tests taken by the college board (an independent board) that are used by students to apply for college after highschool. The score a child gets greatly impacts his/her chance in getting into college and their future. Though the new SAT tests have changed their format to 1600 points (Math: 800, Reading: 400, Writing: 400), however, we will be using data from the older format which gives us almost the same results (Math: 800, Reading: 800, Writing: 800). The main emphasis of this project is to find connections in whether some boroughs or highschools in New York City do better than others and discuss the factors that lead to these differences. Finding differences would be extremely interesting as one can infer how getting into certain public highschools or going for schooling in certain areas of the city would impact the college a child gets into. \n"
    ]
   },
@@ -451,7 +461,7 @@
    "id": "221201af",
    "metadata": {},
    "source": [
-    "# Data Cleaning\n",
+    "## Data Cleaning\n",
     "To start our analysis we need to do certain steps to clean our data and convert it into something that we will find easier to interpret. Since we care about SAT scores and the distribution of different ethnic groups in each high school, we will need to clean this data and remove the '%' sign and convert all percentages and SAT scores in to float. "
    ]
   },
@@ -1367,7 +1377,7 @@
    "id": "91b66309",
    "metadata": {},
    "source": [
-    "# Summary Statistics \n",
+    "## Summary Statistics \n",
     "Part of our analysis is to determine whether certain boroughs have lower SAT scores than others. An important inferance we hope to make is whether regions with higher immigrated or non-white populations might be at a disadvantage and getting lower SAT scores. The reasons could be poor infrastructure, lack of resources and equal opportunities. Hence, we will analyse and create a summary statistics."
    ]
   },
@@ -3046,7 +3056,7 @@
    "id": "db1ca82b",
    "metadata": {},
    "source": [
-    "# Future Steps\n",
+    "## Future Steps\n",
     "With our initial anaylsis we see the spread of SAT scores, the distribution and statistics of SAT scores in each borough and the divide in ethinic groups. In future steps we will further find correlations between these variables and develop more comprehensive and elaborative models that will help in answering our question. "
    ]
   },
