--- a/Project 1.ipynb
+++ b/Project 1.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4323ad94",
+   "id": "1c74449d",
    "metadata": {},
    "source": [
-    "# Does the Borough and Ethinic a student belongs to affect their overall SAT score in NYC"
+    "# Does the Borough and Ethnicity a student belongs to affect their overall SAT score in NYC"
    ]
   },
   {
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "## Introduction \n",
-    "With the use of high school data compiled from the New York City Department of Education, and the SAT score averages and testing rates provided by the College Board, we analyse and discuss whether a student's high school and borough affects the SAT score he gets through college board. SAT scores are standardized tests taken by the college board (an independent board) that are used by students to apply for college after highschool. The score a child gets greatly impacts his/her chance in getting into college and their future. Though the new SAT tests have changed their format to 1600 points (Math: 800, Reading: 400, Writing: 400), however, we will be using data from the older format which gives us almost the same results (Math: 800, Reading: 800, Writing: 800). The main emphasis of this project is to find connections in whether some boroughs or highschools in New York City do better than others and discuss the factors that lead to these differences. Finding differences would be extremely interesting as one can infer how getting into certain public highschools or going for schooling in certain areas of the city would impact the college a child gets into. \n"
+    "With the use of high school data compiled from the New York City Department of Education, and the SAT score averages and testing rates provided by the College Board, we analyse and discuss whether the Borough and Ethnicity a student belongs to affect their overall SAT score in NYC. SAT scores are standardized tests taken by the college board (an independent board) that are used by students to apply for college after highschool. The score a child gets greatly impacts his/her chance in getting into college and their future. Though the new SAT tests have changed their format to 1600 points (Math: 800, Reading: 400, Writing: 400), however, we will be using data from the older format which gives us almost the same results (Math: 800, Reading: 800, Writing: 800). The main emphasis of this project is to find connections in whether some boroughs or highschools in New York City do better than others and discuss the factors that lead to these differences. Finding differences would be extremely interesting as one can infer how getting into certain public highschools or going for schooling in certain areas of the city would impact the college a child gets into. \n"
    ]
   },
   {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e0d4569",
+   "id": "be1b2824",
    "metadata": {},
    "source": [
     "First we are Reading the data and creating a dataframe 'df' and then running our dataframe. "
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95ee8ad2",
+   "id": "3f73e32f",
    "metadata": {},
    "source": [
     "## Data Cleaning\n",
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c60e49e4",
+   "id": "10807369",
    "metadata": {},
    "source": [
     "In the cell below we clean the data remove the '%' sign from the data. Using string methods we removed the percentage sign. "
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f7a77911",
+   "id": "43deb0fa",
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a276013",
+   "id": "8e71f1a3",
    "metadata": {},
    "source": [
     "Our emphasis is to determine whether certain boroughs may have higher SAT scores, as a result, we calulate the percentage of each borough in our data."
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec16a9d2",
+   "id": "453d6c90",
    "metadata": {},
    "source": [
     "We will now remove any rows that contain missing data. This will allow us to interpret our data much easily when we run our analysis. "
@@ -950,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "52ae9394",
+   "id": "571809d6",
    "metadata": {
     "scrolled": true
    },
@@ -1349,7 +1349,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26bfaa25",
+   "id": "1f265226",
    "metadata": {},
    "source": [
     "Converting all our new variables that are without the % sign to floats since they were previosuly as strings. We also make a new variable 'Non-White' which includes the Black, Hispanic and Asian population. "
@@ -1358,7 +1358,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "208514db",
+   "id": "9a9ed744",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1372,7 +1372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d60f1eef",
+   "id": "31856d36",
    "metadata": {},
    "source": [
     "## Summary Statistics \n",
@@ -1381,7 +1381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab8cc147",
+   "id": "6b16767e",
    "metadata": {},
    "source": [
     "As a result, we will use the data we have of percentage of each populations and the average SAT scores to see whether there is correlation between a borrough with a high white population and a low white population. "
@@ -1390,7 +1390,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5b215197",
+   "id": "23f9c911",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1400,7 +1400,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b16286dd",
+   "id": "ca92baf9",
    "metadata": {},
    "outputs": [
     {
@@ -1647,7 +1647,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b3e7b81d",
+   "id": "3f3aeae9",
    "metadata": {},
    "outputs": [
     {
@@ -1894,7 +1894,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e03eba8f",
+   "id": "a16807ed",
    "metadata": {},
    "outputs": [
     {
@@ -2141,7 +2141,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4a12249f",
+   "id": "ee1b854e",
    "metadata": {},
    "outputs": [
     {
@@ -2388,7 +2388,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "be10fb46",
+   "id": "8fc0ad91",
    "metadata": {
     "scrolled": true
    },
@@ -2636,7 +2636,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88b3045f",
+   "id": "94b6a9f7",
    "metadata": {},
    "source": [
     "As we run 5 different summary statistics of each of our 5 boroughs, we can make initial comments on how the SAT scores vary among the boroughs. Regions that tend to have higher white populations such as Staten Island, Queens and Manhattan have done considerably better an acheiving higher SAT scores which are over 1350 on average. Other regions such as Bronx and Brooklyn tend to have SAT scores close to 1200. During a very competitive college application period where each point matters, a difference of 150 points shows how extremely distributed SAT scores can be within a single city. "
@@ -2645,7 +2645,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8da1e3d0",
+   "id": "ee73eb7a",
    "metadata": {},
    "outputs": [
     {
@@ -2889,7 +2889,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec3f2496",
+   "id": "676b38ed",
    "metadata": {},
    "source": [
     "The summary above shows the statistical data of different ethinic groups. We can see how Black and Hispanic populations on average are in majority in each borough. This is a critical insight that will be useful in our future analysis. "
@@ -2897,7 +2897,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4203190",
+   "id": "2cd36987",
    "metadata": {},
    "source": [
     "Since our overall aim or Y variable is to determine the variability of boroughs, hence we will also compute the summary statistics of the Total Average Score of the SAT "
@@ -2906,7 +2906,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "9a00bab2",
+   "id": "95939798",
    "metadata": {},
    "outputs": [
     {
@@ -2934,7 +2934,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "924ffea2",
+   "id": "da16a1e3",
    "metadata": {},
    "source": [
     "Our summary statistics of the Total Average SAT Score shows us the average SAT score for all highschools for whom data is collected is 1276 points approximatly. This result is interesting as we see how some boroughs like staten island and Manhattan where white population is in majority expereince relatively higher scores on average than other boroughs. "
@@ -2942,7 +2942,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "312dbc04",
+   "id": "478ae1e4",
    "metadata": {},
    "source": [
     "To visualize our data we will, in the initial stage of our project, show the SAT spread of average SAT scores in each borough to give a sense of the variability among different highschools and boroughs in NYC. For better visual representation, we will be renaming some of our columns to easily fit our data and key in the plots. "
@@ -2951,7 +2951,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "74f8de81",
+   "id": "aae094f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2961,7 +2961,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "68fe3c15",
+   "id": "7f8fe222",
    "metadata": {},
    "outputs": [
     {
@@ -2982,7 +2982,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "8f1c7c95",
+   "id": "0a037450",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2992,7 +2992,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "d591de70",
+   "id": "f4bb0833",
    "metadata": {},
    "outputs": [
     {
@@ -3012,16 +3012,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cab13b5",
+   "id": "71ea35ff",
    "metadata": {},
    "source": [
-    "For further visual representation between the different boroughs and SAT scores, we are going to develop a histogram that shows how our sample looks like. We see a positive skew towards the right tail of the histogram which indicates that most of the SAT scores lie close to the mean at 1250 while only a few highschools in these boroughs have extremely high scores. "
+    "These boxplots shows us a simple visual representation of some our variables. From a casual overview, we see how on average students gets relatively higher points in the math section, and most average SAT scores in highschools are close to 1250 with a few outliers that go over 1700. Our second boxplot shows the ethnicity spread in all these boroughs. We can see how white and asian populations are very low on average while there is a clear dominanca of black and hispoanic population. This is a key insight since in our analysis later we will interpret whether belonging from a borough with a black/hispanic majority actually might be at a disadvantage when comes to obtaining SAT scores. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1a0929b",
+   "metadata": {},
+   "source": [
+    "For further visual representation between the different boroughs and SAT scores, we are going to develop a histogram that shows how our sample looks like. We see a positive skew towards the right tail of the histogram which indicates that most of the SAT scores lie close to the mean at 1250 while only a few highschools in these boroughs have extremely high scores. Our emphasis will be to see whether most boroughs with SAT scores close to or lower 1200 are from which ethinic group. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "0d2d87be",
+   "execution_count": 21,
+   "id": "64f39a8c",
    "metadata": {},
    "outputs": [
     {
@@ -3030,7 +3038,7 @@
        "<AxesSubplot:xlabel='Total SAT Score', ylabel='Count'>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3051,17 +3059,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c726fb8",
+   "id": "0d6a852c",
    "metadata": {},
    "source": [
     "## Future Steps\n",
-    "With our initial anaylsis we see the spread of SAT scores, the distribution and statistics of SAT scores in each borough and the divide in ethinic groups. In future steps we will further find correlations between these variables and develop more comprehensive and elaborative models that will help in answering our question. "
+    "With our initial anaylsis we see the spread of SAT scores, the distribution and statistics of SAT scores in each borough and the divide in ethinic groups. In future steps we will further find correlations between these variables and a develop more comprehensive and elaborative models that will help in answering our question. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59cac11c",
+   "id": "0831fdcb",
    "metadata": {},
    "outputs": [],
    "source": []
